--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "cross-env PORT=3030 BROWSER=none react-scripts start",
-    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build && cat src/sw-epilog.js >> build/service-worker.js",
+    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test --modulePaths=src",
     "eject": "react-scripts eject",
     "wcd": "webcodesk-srv -p 7070",
@@ -35,7 +35,7 @@
     "extends": "react-app"
   },
   "wcd": {
-    "appMode": "release"
+    "appMode": "demo"
   },
   "browserslist": {
     "production": [
