--- a/package.json
+++ b/package.json
@@ -1,27 +1,19 @@
 {
-  "name": "wcd-boilerplate-pwa",
-  "version": "0.1.0",
+  "name": "wcd-todo-tutorial-demo",
+  "version": "1.0.0",
   "private": true,
   "devDependencies": {
     "@material-ui/core": "4.9.2",
-    "axios": "0.19.2",
+    "@webcodesk/react-app-framework-demo": "2.0.26",
     "cross-env": "6.0.3",
     "express": "4.17.1",
-    "history": "4.10.1",
     "localforage": "1.7.3",
     "lodash": "4.17.15",
     "prop-types": "15.7.2",
-    "query-string": "6.11.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-helmet": "5.2.1",
-    "react-redux": "7.1.3",
-    "react-router-dom": "5.1.2",
-    "react-scripts": "3.2.0",
-    "redux": "4.0.5",
-    "redux-devtools-extension": "2.13.8",
-    "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "cross-env PORT=3030 BROWSER=none react-scripts start",
